--- a/index2.html
+++ b/index2.html
@@ -151,14 +151,17 @@
                 			<li class="first-child">
                         		<a href="#main-slider">맨 위로</a>
 							</li>
-                    		<li>
+							<li>
+	                            	<a href="#our-story">우리 이야기</a>
+	                            </li>
+                    		<li class="first-child split-margin">
                             	<a href="#where-when">시간과 장소</a>
                             </li>
-							<li>
-							    <a href="#rsvp-section">당부의 말씀</a>
-							</li>
-							<li>
+                            <li>
                             	<a href="#gallery-section">갤러리</a>
+							</li>
+													<li>
+							    <a href="#rsvp-section">당부의 말씀</a>
 							</li>
                 		</ul>
 
@@ -241,10 +244,355 @@
                     </div>
                 </div>
             </section>
+
+
+            <!-- OUR STORY SECTION -->
+            <section id="our-story">
+
+                <div class="container">
+
+               	 	<!-- ROW-1 -->
+                	<div class="row">
+
+                        <!-- SECTION TITLE -->
+                    	<div class="col-sm-12 col-md-offset-2 col-md-8 text-center">
+
+                        	<div class="section-title animation fadeInUp">
+                        		<h2>
+                            		우리 <img src="images/heart-icon.png" alt=""> 이야기
+                            	</h2>
+
+                          	</div>
+                        </div>
+                   </div> <!-- END of ROW-1 -->
+
+
+                   <!-- STORY ROW-1-->
+                   <div class="row story-row">
+
+                        <div class="col-sm-12 col-md-offset-1 col-md-4 text-center">
+                            <!--PHOTO-ITEM-->
+                        	<div class="photo-item frame-border animation delay1 fadeInLeft">
+
+                             	<!--PHOTO-->
+                               	<img src="./images/ourstory1.jpg" alt="" class="hover-animation image-zoom-in">
+
+                               	<!--PHOTO OVERLAY-->
+                           		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
+                            	</div><!--END of PHOTO OVERLAY-->
+
+                                <!--ICON LINK-->
+                                <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
+                                    <div class="alignment">
+                                    	<div class="v-align center-middle">
+
+                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '드라이브');"  href="./images/ourstory1.jpg" class="magnific-zoom" title="사랑의 큐피트들">
+        										<div class="de-icon circle light medium-size inline">
+            										<i class="de-icon-zoom-in"></i>
+            									</div>
+        									</a>
+
+                                      	</div>
+                                    </div>
+                                </div><!--END of ICON LINK-->
+
+                            </div><!--END of PHOTO-ITEM-->
+                        </div>
+
+                        <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
+                        	<div class="arrow-left"></div>
+                            <div class="story-date">
+                            	<div class="date-only">01</div>
+                                <div class="month-year">첫번째</div>
+                           </div>
+                           <div class="arrow-right"></div>
+                           <div class="clearboth"></div>
+                        </div>
+
+                        <div class="col-sm-12 col-md-4 animation delay1 fadeInRight">
+                        	<h3>큐피트 세마리</h3>
+                            <p>요크셔테리어 다롱이와 토트 그리고 푸틀 마루 <br/>3마리가 힘을 합쳐 노총각 하나를 구원했습니다 <br/>보상으로 맛있는 간식을 줍니다.<br/>  </p>
+                        </div>
+
+                        <div class="vertical-line">
+                        </div>
+
+					</div><!-- END of STORY ROW-1 -->
+
+                   <!-- STORY ROW-2-->
+                   <div class="row story-row">
+
+                        <div class="col-sm-12 col-md-4 col-md-push-6 text-center">
+                            <!--PHOTO-ITEM-->
+                        	<div class="photo-item frame-border animation delay1 fadeInLeft">
+
+                             	<!--PHOTO-->
+                               	<img src="./images/ourstory3.jpg" alt="" class="hover-animation image-zoom-in">
+
+                               	<!--PHOTO OVERLAY-->
+                           		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
+                            	</div><!--END of PHOTO OVERLAY-->
+
+                                <!--ICON LINK-->
+                                <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
+                                    <div class="alignment">
+                                    	<div class="v-align center-middle">
+
+                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '광교호수공원');" href="./images/ourstory3.jpg" class="magnific-zoom" title="한우목장">
+        										<div class="de-icon circle light medium-size inline">
+            										<i class="de-icon-zoom-in"></i>
+            									</div>
+        									</a>
+
+                                      	</div>
+                                    </div>
+                                </div><!--END of ICON LINK-->
+
+                            </div><!--END of PHOTO-ITEM-->
+                        </div>
+
+                        <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
+                        	<div class="arrow-left"></div>
+                            <div class="story-date">
+                            	<div class="date-only">02</div>
+                                <div class="month-year">두번째</div>
+                           </div>
+                           <div class="arrow-right"></div>
+                           <div class="clearboth"></div>
+                        </div>
+
+                        <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
+                        	<h3>하늘정원</h3>
+                            <p>드디어 하늘정원 의자에~<br/>하늘정원 의자에 커플들이 가득해 앉지 못했던 2인....<br/>
+								드디어 서로 앉아서 도란도란 이야기 합니다.
+                        </div>
+
+                        <div class="vertical-line">
+                        </div>
+
+					</div><!-- END of STORY ROW-2 -->
+
+                    <!-- STORY ROW-3-->
+                   <div class="row story-row">
+
+                        <div class="col-md-offset-1 col-md-4 text-center">
+                            <!--PHOTO-ITEM-->
+                        	<div class="photo-item frame-border animation delay1 fadeInLeft">
+
+                             	<!--PHOTO-->
+                               	<img src="./images/ourstory2.jpg" alt="" class="hover-animation image-zoom-in">
+
+                               	<!--PHOTO OVERLAY-->
+                           		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
+                            	</div><!--END of PHOTO OVERLAY-->
+
+                                <!--ICON LINK-->
+                                <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
+                                    <div class="alignment">
+                                    	<div class="v-align center-middle">
+
+                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '두물머리핫도그');" href="./images/ourstory2.jpg" class="magnific-zoom" title="여행">
+        										<div class="de-icon circle light medium-size inline">
+            										<i class="de-icon-zoom-in"></i>
+            									</div>
+        									</a>
+
+                                      	</div>
+                                    </div>
+                                </div><!--END of ICON LINK-->
+
+                            </div><!--END of PHOTO-ITEM-->
+                        </div>
+
+                        <div class="col-md-2 text-center story-date-wrapper animation fadeIn">
+                        	<div class="arrow-left"></div>
+                            <div class="story-date">
+                            	<div class="date-only">03</div>
+                                <div class="month-year">세번째</div>
+                           </div>
+                           <div class="arrow-right"></div>
+                           <div class="clearboth"></div>
+                        </div>
+
+                        <div class="col-md-4 animation delay1 fadeInRight">
+                        	<h3>한국민속촌</h3>
+                            <p>왕의 정원에 있었다던 정자에 올라가 한컷~ <br/>초가을 날씨에 추위에 떨면서 찍어 웃음기가 하나도 없네요! <br/></p>
+
+                        </div>
+
+                        <div class="vertical-line">
+                        </div>
+
+					</div><!-- END of STORY ROW-3 -->
+
+                   <!-- STORY ROW-4 -->
+                   <div class="row story-row">
+
+                        <div class="col-sm-12 col-md-4 col-md-push-6 text-center">
+                            <!--PHOTO-ITEM-->
+                        	<div class="photo-item frame-border animation delay1 fadeInLeft">
+
+                             	<!--PHOTO-->
+                               	<img src="./images/ourstory4.jpg" alt="" class="hover-animation image-zoom-in">
+
+                               	<!--PHOTO OVERLAY-->
+                           		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
+                            	</div><!--END of PHOTO OVERLAY-->
+
+                                <!--ICON LINK-->
+                                <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
+                                    <div class="alignment">
+                                    	<div class="v-align center-middle">
+
+                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '속초여행');"  href="./images/ourstory4.jpg" class="magnific-zoom" title="어디로?">
+        										<div class="de-icon circle light medium-size inline">
+            										<i class="de-icon-zoom-in"></i>
+            									</div>
+        									</a>
+
+                                      	</div>
+                                    </div>
+                                </div><!--END of ICON LINK-->
+
+                            </div><!--END of PHOTO-ITEM-->
+                        </div>
+
+                        <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
+                        	<div class="arrow-left"></div>
+                            <div class="story-date">
+                            	<div class="date-only">04</div>
+                                <div class="month-year">네번째</div>
+                           </div>
+                           <div class="arrow-right"></div>
+                           <div class="clearboth"></div>
+                        </div>
+
+                        <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
+                        	<h3>수목원 여행</h3>
+                            <p>산림욕을 하러 강릉수목원으로 출발~<br/>
+								비록 해가 구름에 살짝 가려져 잘 못보았지만<br/> 첫 일출 앞에서 사진 찰칵!<br/>
+								강릉에서 맛있는것도 먹고 행복한 시간을 보냈습니다.</p>
+                        </div>
+
+                        <div class="vertical-line">
+                        </div>
+
+					</div><!-- END of STORY ROW-4 -->
+
+					<!-- STORY ROW-5-->
+				 <div class="row story-row">
+
+							<div class="col-md-offset-1 col-md-4 text-center">
+									<!--PHOTO-ITEM-->
+								<div class="photo-item frame-border animation delay1 fadeInLeft">
+
+										<!--PHOTO-->
+											<img src="./images/ourstory5.jpg" alt="" class="hover-animation image-zoom-in">
+
+											<!--PHOTO OVERLAY-->
+										<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
+										</div><!--END of PHOTO OVERLAY-->
+
+											<!--ICON LINK-->
+											<div class="layer wh100 hidden-link hover-animation delay1 fade-in">
+													<div class="alignment">
+														<div class="v-align center-middle">
+
+															<a onclick="ga('send', 'event', '스토리', '클릭', '한우마을 흔들그네');" href="./images/ourstory5.jpg" class="magnific-zoom" title="집 꾸미기">
+									<div class="de-icon circle light medium-size inline">
+											<i class="de-icon-zoom-in"></i>
+										</div>
+								</a>
+
+															</div>
+													</div>
+											</div><!--END of ICON LINK-->
+
+									</div><!--END of PHOTO-ITEM-->
+							</div>
+
+							<div class="col-md-2 text-center story-date-wrapper animation fadeIn">
+								<div class="arrow-left"></div>
+									<div class="story-date">
+										<div class="date-only">05</div>
+											<div class="month-year">다섯번째</div>
+								 </div>
+								 <div class="arrow-right"></div>
+								 <div class="clearboth"></div>
+							</div>
+
+							<div class="col-md-4 animation delay1 fadeInRight">
+								<h3>한우마을 </h3>
+									<p>소도 보고 양도 보고 기념도 남기고~<br/>
+										야경이 예뻐서 사진하나 찰칵~<br/>
+										사진 찍을 동안만 잠시 벗었어요! 걱정마세요.</p>
+
+							</div>
+
+							<div class="vertical-line">
+							</div>
+
+				</div><!-- END of STORY ROW-5 -->
+
+				<!-- STORY ROW-6 -->
+				<div class="row story-row">
+
+						 <div class="col-sm-12 col-md-4 col-md-push-6 text-center">
+								 <!--PHOTO-ITEM-->
+							 <div class="photo-item frame-border animation delay1 fadeInLeft">
+
+									 <!--PHOTO-->
+										 <img src="./images/ourstory6.jpg" alt="" class="hover-animation image-zoom-in">
+
+										 <!--PHOTO OVERLAY-->
+									 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
+									 </div><!--END of PHOTO OVERLAY-->
+
+										 <!--ICON LINK-->
+										 <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
+												 <div class="alignment">
+													 <div class="v-align center-middle">
+
+														 <a onclick="ga('send', 'event', '스토리', '클릭', '웨딩촬영메이크업');" href="./images/ourstory6.jpg" class="magnific-zoom" title="속초여행">
+								 <div class="de-icon circle light medium-size inline">
+										 <i class="de-icon-zoom-in"></i>
+									 </div>
+							 </a>
+
+														 </div>
+												 </div>
+										 </div><!--END of ICON LINK-->
+
+								 </div><!--END of PHOTO-ITEM-->
+						 </div>
+
+						 <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
+							 <div class="arrow-left"></div>
+								 <div class="story-date">
+									 <div class="date-only">06</div>
+										 <div class="month-year">여섯번째</div>
+								</div>
+								<div class="arrow-right"></div>
+								<div class="clearboth"></div>
+						 </div>
+
+						 <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
+							 <h3>웨딩촬영 준비!</h3>
+								 <p>드디어 웨딩촬영 날이 밝았습니다.<br/>
+									서로 마주보고 걸터 앉아  <br/>
+									얼굴과 머리를 꽃단장하고 촬영 준비를 하고 한컷!</p>
+						 </div>
+
+						 <div class="vertical-line">
+						 </div>
+
+				</div><!-- END of STORY ROW-6 -->
+
+
                     <div class="row">
                     	<div class="col-md-12 text-center">
                         	<div id="end-of-story" class="animation fadeInUp">
-                        		<h2>경환이와 지선이가 결혼을 하게 되었습니다.</h2>
+                        		<h2>그리고 드디어<br/> 결혼을 하게 되었습니다.</h2>
                                 <div class="heart-divider">
                                     	<span class="grey-line"></span>
                                         <i class="de-icon-heart pink-heart"></i>
@@ -371,45 +719,7 @@
              	</div>
             </section>
 
-           <!-- RSVP SECTION -->
-		   <section id="rsvp-section">
 
-			<div class="container">
-
-					<!-- ROW-1 -->
-				<div class="row">
-
-					<!-- SECTION TITLE -->
-					<div class="col-md-offset-2 col-md-8 text-center">
-
-						<div class="section-title animation fadeInUp">
-							<h2>
-								당부의 말씀.
-							</h2>
-							<div class="heart-divider animation delay1 fadeInUp">
-								<span class="white-line"></span>
-								<i class="de-icon-heart pink-heart"></i>
-								<i class="de-icon-heart white-heart"></i>
-								<span class="white-line"></span>
-							</div>
-
-							<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">저희 두사람 평생을 함께 하려는 약속의 자리입니다 <br/> 모든 하객님들의 축하를 받고 싶습니다만 <br/> 코로나로 인해 참석치 못하시더라도 <br/> 결혼을 축하해 주시는 모든 분들께 진심으로 감사드립니다.
-							</h1>
-							</div>
-							<p>
-								<a onclick="ga('send', 'event', '페이스북 이벤트 페이지', '링크 클릭');" target="_blank" href="https://www.facebook.com/" style="text-decoration: underline;color:#37A4FF;"></a>
-							</p>
-							
-							<i class="de-icon-heart pink-heart"></i>
-							<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> </i><strong><li>신랑 (이경환)</strong> <br/>  아버지 계좌번호 농협은행 690 - 12 - 015882 (이용근)<br/>어머니 계좌번호 우리은행 499 - 000946 - 12- 001 (박종희) <br/>
-							<br/>
-						</i><strong><li>신부 (박지선)</strong> <br/> 아버지 계좌번호 씨티은행  428  -  22958  -  265   (박근재)<br/>어머니 계좌번호 국민은행 225902 - 04 - 080852 (고후자) <br/></li>
-						  </div>
-					</div>
-			   </div> <!-- END of ROW-1 -->
-			</div>
-		   </section>
-	</section>
            	<!-- GALLERY SECTION -->
             <section id="gallery-section">
 
@@ -707,6 +1017,56 @@
         		</div>
         	</section>
 
+
+
+
+            <!-- RSVP SECTION -->
+            <section id="rsvp-section">
+
+                <div class="container">
+
+               	 	<!-- ROW-1 -->
+                	<div class="row">
+
+                        <!-- SECTION TITLE -->
+                    	<div class="col-md-offset-2 col-md-8 text-center">
+
+                        	<div class="section-title animation fadeInUp">
+                        		<h2>
+                            		당부의 말씀.
+								</h2>
+								<div class="heart-divider animation delay1 fadeInUp">
+									<span class="white-line"></span>
+									<i class="de-icon-heart pink-heart"></i>
+									<i class="de-icon-heart white-heart"></i>
+									<span class="white-line"></span>
+								</div>
+
+								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">저희 두사람 평생을 함께 하려는 약속의 자리입니다 <br/> 모든 하객님들의 축하를 받고 싶습니다만 <br/> 코로나로 인해 참석치 못하시더라도 <br/> 결혼을 축하해 주시는 모든 분들께 진심으로 감사드립니다.
+								</h1>
+								</div>
+                            	<p>
+                            		<a onclick="ga('send', 'event', '페이스북 이벤트 페이지', '링크 클릭');" target="_blank" href="https://www.facebook.com/" style="text-decoration: underline;color:#37A4FF;"></a>
+                            	</p>
+								
+								<i class="de-icon-heart pink-heart"></i>
+								<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> </i><strong><li>신랑 (이경환)</strong> <br/>  아버지 계좌번호 농협은행 690 - 12 - 015882 (이용근)<br/>어머니 계좌번호 우리은행 499 - 000946 - 12- 001 (박종희) <br/>
+								<br/>
+							</i><strong><li>신부 (박지선)</strong> <br/> 아버지 계좌번호 씨티은행  428  -  22958  -  265   (박근재)<br/>어머니 계좌번호 국민은행 225902 - 04 - 080852 (고후자) <br/></li>
+                          	</div>
+                        </div>
+                   </div> <!-- END of ROW-1 -->
+
+
+                </div>
+
+           	</section>
+
+
+
+
+
+        </section>
 
         <!-- FOOTER SECTION -->
             <footer>
